--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.4.1",
     "dom": "^0.0.3",
     "firebase": "^11.0.1",
     "react": "^18.3.1",
